Bug 438286 - [IE only] new Git sync page has some layout strangeness on IE

--- a/bundles/org.eclipse.orion.client.git/web/git/css/git.css
+++ b/bundles/org.eclipse.orion.client.git/web/git/css/git.css
@@ -256,7 +256,7 @@ table .sectionTable {
 
 .gitChangeListSelectionStatus {
 	overflow: hidden;
-	width: 80%;
+	width: calc(100% - 200px);
 	text-align: center;
 	float: left;
 	padding-top: 3px;
