--- a/bundles/org.eclipse.orion.client.ui/web/css/controls.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/controls.css
@@ -259,10 +259,7 @@ textarea.parameterInput {
 	display: inline-block; 
 	vertical-align: middle; 
 	background: url(../images/core_sprites.png) no-repeat top left;
-	padding: 4px;
-	padding-left: 8px;
-	padding-right: 8px;
-	margin-right: 4px;
+	border: 0;
 }
 
 .modelDecorationSprite { 
